--- a/Project 6 Template.Rmd
+++ b/Project 6 Template.Rmd
@@ -43,13 +43,12 @@ Matching is usually used in observational studies to to approximate random assig
 
 2. Visualize the distribution of the covariate by treatment/control condition. Are treatment and control balanced on this covariate?
 
-
 ```{r}
 #We explore the distribution of students by those whose parents voted 
-dat_sub = ypsps %>% select (college,parent_Vote) %>% 
+dat_sub = ypsps %>% dplyr::select (college,parent_Vote) %>% 
   mutate(random_treat = sample(0:1,nrow(ypsps), replace=T,prob=c(0.5,0.5)))%>%
-  mutate (college=if_else(college==1,"Treatment","Control") )%>%
-  mutate (random_treat=if_else(random_treat==1,"Random Treatment","Random Control") )
+  mutate(college=if_else(college==1,"Treatment","Control") )%>%
+  mutate(random_treat=if_else(random_treat==1,"Random Treatment","Random Control") )
 
 # Visualize the distribution by treatment/control (ggplot)
 ggplot(dat_sub, aes(x=parent_Vote, fill=college)) +
@@ -71,10 +70,10 @@ Simulate the first step 10,000 times and visualize the distribution of treatment
 sims=10000
 
 #This function creates a randomized assignment to treatment with a 50/50 probability
-#The outcome is a vector which counts the total number of people by treatment and covarriate value
+#The outcome is a vector which counts the total number of people by treatment and covariate value
 rand_fun = function(){
   rand_vec =  sample(0:1,nrow(ypsps),rep=TRUE,prob=c(0.5,0.5))
-  dat = ypsps%>% select(parent_Vote)%>%mutate(sim=rand_vec)
+  dat = ypsps%>% dplyr::select(parent_Vote)%>%mutate(sim=rand_vec)
   result = data_frame(rand_sum = c(
   nrow(dat%>%filter(sim==0 & parent_Vote==0))
   ,nrow(dat%>%filter(sim==0 & parent_Vote==1))
@@ -109,7 +108,7 @@ geom_bar(stat="identity", position=position_dodge())+
 \end{enumerate}
 
 \textbf{Your Answer} first draft: We see that the covariate we chose to explore - parent_vote - isn't balanced for treatment and control. 
-In the real expriment, the control group is underrepresented in the group of students whose parents voted. 
+In the real experiment, the control group is underrepresented in the group of students whose parents voted. 
 In randomized assignment, we would expect treatment and control to have similar distributions covarriates.
 This is a good example for how the independence of treatment assignment and baseline covariates does not
 guarantee balance of treatment assignment and baseline covariates. 
@@ -123,7 +122,7 @@ Select covariates that you think best represent the "true" model predicting whet
 
 ```{r}
 # Select covariates that represent the "true" model for selection, fit model
-ypsps_selected = ypsps %>% select(college,parent_Vote,parent_CivicOrg,parent_OwnHome
+ypsps_selected = ypsps %>% dplyr::select(college,parent_Vote,parent_CivicOrg,parent_OwnHome
                                   ,parent_Rally,parent_PolClub,parent_Money
                                   ,student_AdultTalk,student_FrTalk
                                   ,student_Newspaper,student_Magazine
@@ -135,10 +134,10 @@ ypsps_selected = ypsps %>% select(college,parent_Vote,parent_CivicOrg,parent_Own
 #We write a function that selects the treatment variable (college) and one covariate at a time
 #and calculates their mean and a chi-squered test of difference.
 balance_fun = function(dat,n){
-  dat_sub = dat%>% select(college,colnames(dat)[n])
+  dat_sub = dat%>% dplyr::select(college,colnames(dat)[n])
   result = data_frame(covariate = as.character(colnames(dat)[n])
-                      ,control = round(mean((dat_sub%>%filter(college==0)%>% select(-college))[,1]),3)
-                     ,treatment = round(mean((dat_sub%>%filter(college==1)%>% select(-college))[,1]),3)
+                      ,control = round(mean((dat_sub%>%filter(college==0)%>% dplyr::select(-college))[,1]),3)
+                     ,treatment = round(mean((dat_sub%>%filter(college==1)%>% dplyr::select(-college))[,1]),3)
                      ,chisq_test = round(chisq.test(table(ypsps_selected$college,
                                                     ypsps_selected[,colnames(ypsps_selected)[n]]))$p.value,5)
                       )
@@ -179,55 +178,106 @@ Henderson/Chatfield argue that an improperly specified propensity score model ca
 
 ```{r}
 # Remove post-treatment and outcome covariates
-ypsps_pre_treat = ypsps%>%select(!matches("1973")& !matches("1982") 
-                                 & -c("student_ppnscal","college","student_vote"
-                                     ,"student_meeting","student_button"
-                                     ,"student_money","student_communicate"
-                                     ,"student_demonstrate","student_community"
-                                     ,"student_other","interviewid"))
+ypsps_pre_treat_w_outcome <- ypsps%>%dplyr::select(!matches("1973") & !matches("1982") 
+                                           & -c("student_vote" ,"student_meeting","student_button"
+                                                ,"student_money","student_communicate"
+                                                ,"student_demonstrate","student_community"
+                                                ,"student_other","interviewid"))
 
+# removing missing values because they cause issues with matchit
+ypsps_pre_treat_w_outcome <- na.omit(ypsps_pre_treat_w_outcome)
+ypsps_pre_treat <- ypsps_pre_treat_w_outcome %>%
+  dplyr::select(-c("student_ppnscal"))
+
+outcome <- ypsps_pre_treat_w_outcome %>%
+  dplyr::select(c("student_ppnscal"))
 
 # Randomly select 30 features
-ypsps_pre_treat_selected = ypsps_pre_treat[, sample(ncol(ypsps_pre_treat), #randomize the selection of columns
-                                                    sample(15:50, 1, replace=TRUE) #randomize the number of columns
-                                                    )]
+#ypsps_pre_treat_selected = ypsps_pre_treat[, sample(ncol(ypsps_pre_treat), #randomize the selection of columns
+ #                                                   sample(15:50, 1, replace=TRUE) #randomize the number of columns
+  #                                                  )]
 
-# Simulate random selection of features 10k+ times
-
-
-# Fit p-score models and save ATTs, proportion of balanced covariates, and mean percent balance improvement
-
-# model_ps <- glm(college ~ parent_Vote + parent_CivicOrg + parent_OwnHome
-#                 ,family = binomial()
-#                 ,data = ypsps_selected)
-# 
-# dat <- ypsps_selected %>% mutate(prop_score = predict(model_ps))
-# 
-# #subset dataset
-# df_a0 <- dat %>% filter(college == 0)
-# df_a1 <- dat %>% filter(college == 1)
-# 
-# dist.prop.score <- function(x,y) { abs(x-y) }
-# 
-# calculate.dist <- function(x, y, dist.method, xnames = df_a1$ID, ynames = df_a0$ID) {
-#   dists <- apply(y, 1, function(j) {apply(x, 1, function(i) {dist.method(i,j)})})
-#   rownames(dists) <- xnames
-#   colnames(dists) <- ynames
-#   return(dists)
-# }
-# 
-# dists_ps <- calculate.dist(as.matrix(df_a1[, "prop_score"]),
-#                            as.matrix(df_a0[, "prop_score"]),
-#                            dist.prop.score)
-# as.data.frame(dists_ps)
+# number of sims
+n = 100
+# randomly select columns
+col.list <- replicate(n, sample(2:ncol(ypsps_pre_treat),size=sample(2:ncol(ypsps_pre_treat),size = 1,replace = FALSE), replace = TRUE), simplify = FALSE)
+# remove duplicates from the column lists because we don't want to have the same variable twice in the equation
+col.list.rm <- list()
+for (i in 1:length(col.list)) {
+  x <- unique(col.list[[i]])
+  col.list.rm[[i]] <- as.vector(x)
+}
 
 
-# Plot ATT v. proportion
+df_list <- list()  # create empty list of dataframes
+# populate this list with the randomly selected pre-treatment features
+for (i in 1:length(col.list.rm)) {
+  x <- ypsps_pre_treat[, c(1, col.list.rm[[i]])]
+  df_list[[i]] <- as.data.frame(x)
+}
+#creating formulas for the matchit formula based on these dfs
+formulas <- lapply(df_list, function(X) {f <- reformulate(setdiff(colnames(X), "college"), response="college")})
 
-# 10 random covariate balance plots (hint try gridExtra)
-# Note: ggplot objects are finnicky so ask for help if you're struggling to automatically create them; consider using functions!
+# getting propensity score model summaries
+matchit <- list()
+for (i in 1:length(formulas)) {
+    matchit[[i]] <- matchit(formula = formulas[[i]], data = ypsps_pre_treat_w_outcome, method = "nearest", distance = "logit")
+ }
 
+#model summaries
+model.summaries = lapply(matchit, function(x) summary(x))
 
+# getting model formulas to predict outcomes
+outcome_formula <- lapply(df_list, function(X) {f <- reformulate(setdiff(colnames(X), "student_ppnscal"), response="student_ppnscal")})
+
+# creating empty list of model summaries and loop through models predicting the outcome
+lm_prop_score_att_sum <- list()
+for (i in 1:length(outcome_formula)) {
+    prop_score_att <- match.data(matchit[[i]])
+    lm_prop_score_att_sum[[i]] <- lm(outcome_formula[[i]], data = prop_score_att, weights = weights)
+ }
+
+# saving ATTs
+ATT = lapply(lm_prop_score_att_sum, function(x)coef(x)[2])
+
+# getting the proportion of covariates that meet the standardized mean difference threshold, and the mean percent improvement in the standardized mean difference.
+p_bal_covariates <- list()
+mean_improvement <- list()
+for (i in 1:length(model.summaries)) {
+  test <- model.summaries[[i]]
+  p_bal_covariates[[i]] = sum(test$sum.all[,3] <= 0.1)/length(test$sum.all[,3])
+  mean_improvement[[i]] = mean(test$reduction[,1])
+}
+
+# combining into single dataframe
+ATT_df <- data.frame(matrix(unlist(ATT), nrow=length(ATT), byrow=TRUE))
+ATT_df <- ATT_df %>%
+  rename(ATT = "matrix.unlist.ATT...nrow...length.ATT...byrow...TRUE.")
+p_bal_covariates_df <- data.frame(matrix(unlist(p_bal_covariates), nrow=length(p_bal_covariates), byrow=TRUE))
+p_bal_covariates_df <- p_bal_covariates_df %>%
+  rename(p_balanced_cov = "matrix.unlist.p_bal_covariates...nrow...length.p_bal_covariates...")
+mean_improvement_df <- data.frame(matrix(unlist(mean_improvement), nrow=length(mean_improvement), byrow=TRUE))
+mean_improvement_df <- mean_improvement_df %>%
+  rename(mean_improvement = "matrix.unlist.mean_improvement...nrow...length.mean_improvement...")
+
+dt <- cbind(ATT_df,p_bal_covariates_df,mean_improvement_df)
+
+library(ggthemes)
+ggplot(dt, aes(x=p_balanced_cov, y=ATT)) +
+  geom_point() +
+  geom_line(aes(x=.17), linetype = "dotted", color="red") +
+  ggthemes::theme_economist_white() +
+  theme(axis.title = element_text()) +
+  ggtitle("ATTs and Balanced Covariate Proportions") +
+  xlab("Proportion of covariates that were balanced") +
+  ylab("Average Treatment Effect on the Treated (ATT)") 
+
+# choose 10 random models and plot their covariate balance plots
+random_models <- sample(n, size=10)
+for (i in random_models) {
+  test <- model.summaries[[i]]
+  plot(test, var.order = "unmatched", cex=0.5)
+}
 
 ```
 
@@ -235,8 +285,22 @@ ypsps_pre_treat_selected = ypsps_pre_treat[, sample(ncol(ypsps_pre_treat), #rand
 
 \begin{enumerate}
     \item \textbf{How many simulations resulted in models with a higher proportion of balanced covariates? Do you have any concerns about this?}
-    \item \textbf{Your Answer}:
+```{r}
+dt %>%
+  subset(p_balanced_cov>0.17) %>%
+  nrow()
+```
+    \item \textbf{Your Answer}: 
     \item \textbf{Analyze the distribution of the ATTs. Do you have any concerns about this distribution?}
+```{r}
+ggplot(data = dt, aes(x=ATT)) +
+  geom_histogram() +
+  ggthemes::theme_economist_white() +
+  theme(axis.title = element_text()) +
+  ggtitle("Distribution of the ATTs") +
+  xlab("Average Treatment Effect on the Treated (ATT)") +
+  ylab("Count")
+```
     \item \textbf{Your Answer:}
     \item \textbf{Do your 10 randomly chosen covariate balance plots produce similar numbers on the same covariates? Is it a concern if they do not?}
     \item \textbf{Your Answer:}
@@ -249,31 +313,137 @@ ypsps_pre_treat_selected = ypsps_pre_treat[, sample(ncol(ypsps_pre_treat), #rand
 Henderson/Chatfield propose using genetic matching to learn the best weights for Mahalanobis distance matching. Choose a matching algorithm other than the propensity score (you may use genetic matching if you wish, but it is also fine to use the greedy or optimal algorithms we covered in lab instead). Repeat the same steps as specified in Section 4.2 and answer the following questions:
 
 ```{r}
-# Remove post-treatment covariates
 
-# Randomly select features
+# number of sims
+n = 100
 
-# Simulate random selection of features 10k+ times
+# randomly select columns
+col.list <- replicate(n, sample(2:ncol(ypsps_pre_treat),size=sample(2:ncol(ypsps_pre_treat),size = 1,replace = FALSE), replace = TRUE), simplify = FALSE)
+# remove duplicates from the column lists because we don't want to have the same variable twice in the equation
+col.list.rm <- list()
+for (i in 1:length(col.list)) {
+  x <- unique(col.list[[i]])
+  col.list.rm[[i]] <- as.vector(x)
+}
 
-# Fit  models and save ATTs, proportion of balanced covariates, and mean percent balance improvement
+
+df_list <- list()  # create empty list of dataframes
+# populate this list with the randomly selected pre-treatment features
+for (i in 1:length(col.list.rm)) {
+  x <- ypsps_pre_treat[, c(1, col.list.rm[[i]])]
+  df_list[[i]] <- as.data.frame(x)
+}
+#creating formulas for the matchit formula based on these dfs
+formulas <- lapply(df_list, function(X) {f <- reformulate(setdiff(colnames(X), "college"), response="college")})
+
+# getting propensity score model summaries
+matchit_alt <- list()
+for (i in 1:length(formulas)) {
+    matchit_alt[[i]] <- matchit(formula = formulas[[i]], data = ypsps_pre_treat_w_outcome, method = "full", distance = "mahalanobis")
+ }
+
+#model summaries
+model.summaries.alt = lapply(matchit_alt, function(x) summary(x))
+
+# getting model formulas to predict outcomes
+outcome_formula <- lapply(df_list, function(X) {f <- reformulate(setdiff(colnames(X), "student_ppnscal"), response="student_ppnscal")})
+
+# creating empty list of model summaries and loop through models predicting the outcome
+full_att_sum <- list()
+for (i in 1:length(outcome_formula)) {
+    full_att <- match.data(matchit_alt[[i]])
+    full_att_sum[[i]] <- lm(outcome_formula[[i]], data = full_att, weights = weights)
+ }
+
+# saving ATTs
+ATT = lapply(full_att_sum, function(x)coef(x)[2])
+
+# getting the proportion of covariates that meet the standardized mean difference threshold, and the mean percent improvement in the standardized mean difference.
+p_bal_covariates <- list()
+mean_improvement <- list()
+for (i in 1:length(model.summaries.alt)) {
+  test <- model.summaries.alt[[i]]
+  p_bal_covariates[[i]] = sum(test$sum.all[,3] <= 0.1)/length(test$sum.all[,3])
+  mean_improvement[[i]] = mean(test$reduction[,1])
+}
+
+# combining into single dataframe
+ATT_df <- data.frame(matrix(unlist(ATT), nrow=length(ATT), byrow=TRUE))
+ATT_df <- ATT_df %>%
+  rename(ATT = "matrix.unlist.ATT...nrow...length.ATT...byrow...TRUE.")
+p_bal_covariates_df <- data.frame(matrix(unlist(p_bal_covariates), nrow=length(p_bal_covariates), byrow=TRUE))
+p_bal_covariates_df <- p_bal_covariates_df %>%
+  rename(p_balanced_cov = "matrix.unlist.p_bal_covariates...nrow...length.p_bal_covariates...")
+mean_improvement_df <- data.frame(matrix(unlist(mean_improvement), nrow=length(mean_improvement), byrow=TRUE))
+mean_improvement_df <- mean_improvement_df %>%
+  rename(mean_improvement = "matrix.unlist.mean_improvement...nrow...length.mean_improvement...")
+
+dt_alt <- cbind(ATT_df,p_bal_covariates_df,mean_improvement_df)
 
 # Plot ATT v. proportion
+ggplot(dt_alt, aes(x=p_balanced_cov, y=ATT)) +
+  geom_point() +
+  geom_line(aes(x=.17), linetype = "dotted", color="red") +
+  ggthemes::theme_economist_white() +
+  theme(axis.title = element_text()) +
+  ggtitle("ATTs and Balanced Covariate Proportions") +
+  xlab("Proportion of covariates that were balanced") +
+  ylab("Average Treatment Effect on the Treated (ATT)") 
 
 # 10 random covariate balance plots (hint try gridExtra)
-# Note: ggplot objects are finnicky so ask for help if you're struggling to automatically create them; consider using functions!
+random_models_alt <- sample(n, size=10)
+for (i in random_models_alt) {
+  test <- model.summaries.alt[[i]]
+  plot(test, var.order = "unmatched", cex=0.5)
+}
+
 ```
+
 
 ```{r}
 # Visualization for distributions of percent improvement
+ggplot(data = dt_alt, aes(x=mean_improvement)) +
+  geom_histogram() +
+  ggthemes::theme_economist_white() +
+  theme(axis.title = element_text()) +
+  ggtitle("Mean Improvement") +
+  xlab("Mean Improvement") +
+  ylab("Count")
+
+ggplot(data = dt_alt, aes(x=ATT)) +
+  geom_histogram() +
+  ggthemes::theme_economist_white() +
+  theme(axis.title = element_text()) +
+  ggtitle("Distribution of the ATTs") +
+  xlab("Average Treatment Effect on the Treated (ATT)") +
+  ylab("Count")
 ```
 
 ## Questions
 
 \begin{enumerate}
     \item \textbf{Does your alternative matching method have more runs with higher proportions of balanced covariates?}
-    \item \textbf{Your Answer:}
+```{r}
+dt_alt %>%
+  subset(p_balanced_cov>0.17) %>%
+  nrow()
+```
+    \item \textbf{Your Answer:} Yes.
     \item \textbf{Use a visualization to examine the change in the distribution of the percent improvement in balance in propensity score matching vs. the distribution of the percent improvement in balance in your new method. Which did better? Analyze the results in 1-2 sentences.}
-    \item \textbf{Your Answer:}
+```{r}
+#combining results into single df
+colnames(dt) <- paste0('prop_score_', colnames(dt))
+colnames(dt_alt) <- paste0('alt_method_', colnames(dt_alt))
+dt_all <- cbind(dt, dt_alt)
+ggplot(data = dt_all, aes(x=prop_score_mean_improvement, y = alt_method_mean_improvement)) +
+  geom_point() +
+  ggthemes::theme_economist_white() +
+  theme(axis.title = element_text()) +
+  ggtitle("Comparison of Balance Improvement Between Two Methods") +
+  xlab("Mean Improvement in the Propensity Score Model") +
+  ylab("Mean Improvement in the Alternative Model")
+```
+    \item \textbf{Your Answer:} The alternative model which uses Malahanobis exact matching has less variation in mean improvement and significantly more positive cases of improvement. The propensity score models actually worsen balance.
 \end{enumerate}
 
 \textbf{Optional:} Looking ahead to the discussion questions, you may choose to model the propensity score using an algorithm other than logistic regression and perform these simulations again, if you wish to explore the second discussion question further.
